--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="car-maintenance">
   <h1>Schedule car maintenance</h1>
-
+  <p>Select a maintenance job</p>
   <form [formGroup]="scheduleMaintenanceJobForm">
     <mat-form-field>
       <mat-label>Select an maintenance job:</mat-label>
@@ -26,12 +26,12 @@
   @if(selectedMaintenanceJob.serviceHours === 1) {
   <p>
     This job will take {{ selectedMaintenanceJob.serviceHours }} hour to
-    complete
+    complete, with an hourly rate of € {{hourRate}}
   </p>
   } @else {
   <p>
     This job will take {{ selectedMaintenanceJob.serviceHours }} hours to
-    complete
+    complete, with an hourly rate of € {{hourRate}}
   </p>
   }
   <!-- Either show that no spare parts are required or list the required spare parts -->
@@ -46,19 +46,39 @@
     }
   </ul>
   }
-  <form [formGroup]="dateTimeForm">
-    <mat-form-field>
-      <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="datepicker">
-      <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
-      <mat-datepicker #datepicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Pick a time</mat-label>
-      <input matInput [matTimepicker]="timepicker">
-      <mat-timepicker-toggle matIconSuffix [for]="timepicker"/>
-      <mat-timepicker #timepicker/>
-    </mat-form-field>
-  </form>
+  <mat-form-field>
+    <mat-label>Maintenance date</mat-label>
+    <input matInput [matDatepicker]="datepicker" [(ngModel)]="selectedDate" />
+    <mat-datepicker #datepicker />
+    <mat-datepicker-toggle [for]="datepicker" matSuffix />
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Maintenance time</mat-label>
+    <input
+      matInput
+      [matTimepicker]="timepicker"
+      [matTimepickerMin]="'6:00'"
+      [matTimepickerMax]="'19:00'"
+      [(ngModel)]="selectedDate"
+      [ngModelOptions]="{ updateOn: 'blur' }"
+    />
+    <mat-timepicker #timepicker />
+    <mat-timepicker-toggle [for]="timepicker" matSuffix />
+  </mat-form-field>
+  <div>
+    <button mat-button (click)="calculate()">Calculate</button>
+  </div>
+
+  @if(markupWeekend !== 100) {
+    <p>The selected day is in a weekend, please take into account that a markup of {{markupWeekend}}% is set.</p>
+  }
+
+  @if(costOfScheduledMaintenanceJob > 0) {
+    <h4>Result</h4>
+    <p>Performing the selected maintenance job will cost the following:</p>
+    <p>Excluding tax: € {{costOfScheduledMaintenanceJobWithoutTax | number : '1.2-2'}}</p>
+    <p>Including tax ({{taxPercentage}}%): € {{costOfScheduledMaintenanceJob | number : '1.2-2'}}</p>
+  }
   }
 </div>
